--- a/almoxarifado/almoxarifado/src/main/resources/application.yml
+++ b/almoxarifado/almoxarifado/src/main/resources/application.yml
@@ -7,17 +7,16 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
         format_sql: true
-        jdbc:
-          lob:
-            non_contextual_creation: true
 
   flyway:
     enabled: true
     locations: classpath:db/migration
-    baseline-on-migrate: true
+    schemas: public
+    default-schema: public
+    baseline-on-migrate: false
     validate-on-migrate: true
